Fixed header menu on mobile devices

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -73,9 +73,20 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .site-nav {
+  background-color: $color-petroleum-blue;
 
   .page-link {
     color: white;
+  }
+
+  @include media-query($on-palm) {
+
+    .menu-icon {
+
+      > svg path {
+        fill: white;
+      }
+    }
   }
 }
 
